# AISTUDY

./: .gitignore  GME_2024_Residents.csv  accesspysheet-e2f8e30d6903.json  data_note.ipynb  main.py  pyproject.toml  requirements.txt
