[project]
name = "aistudy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gspread>=6.2.0",
    "oauth2client>=4.1.3",
    "st-login-form>=1.2.0",
    "st-supabase-connection>=2.0.1",
    "streamlit>=1.42.2",
    "supabase>=2.13.0",
]

[tool.uv.workspace]
members = ["AISTUDY"]
